--- a/ECGapp/templates/upload1.html
+++ b/ECGapp/templates/upload1.html
@@ -201,8 +201,7 @@
             <div class="file-input">
 
         <input type="file" name="file" id="file" class="file">
-                 <label for="file">Upload
-                 </label>
+                 <label for="file">Upload</label>
                 <p class="file-name"></p>
     </div>
     <br><br>
@@ -213,6 +212,8 @@
 
     </form>
         </div>
+
+
 <script>
     const file = document.querySelector('#file');
 file.addEventListener('change', (e) => {
